--- a/README
+++ b/README
@@ -1,11 +1,6 @@
-FROM ROOT DIRECTORY
-
-
 TO COMPILE:
 
-
-
-javac -cp /home/goy5022/Desktop/jetty-ssl-server/resources/java-json.jar:/home/goy5022/Desktop/jetty-ssl-server/resources/mysql-connector-java-5.1.29-bin.jar:/home/goy5022/Desktop/jetty-ssl-server/resources/servlet-api-2.5.jar ./webapps/bin/WEB-INF/classes/DBServlet.java
+javac -cp resources/java-json.jar:/resources/mysql-connector-java-5.1.29-bin.jar:resources/servlet-api-2.5.jar ./webapps/bin/WEB-INF/classes/DBServlet.java
 
 TO RUN 
 
